--- a/Links/links.html
+++ b/Links/links.html
@@ -1,4 +1,4 @@
-<p>Movie Reviews:
+<!-- <p>Movie Reviews:
   <ul>
     <li><a href="http://www.empireonline.com"></a>Empire</li>
     <li><a href="http://www.metacritic.com"></a>metacritic</li>
@@ -7,4 +7,29 @@
     
   </ul>
 
-</p>
+</p>  -->
+
+
+<html>
+  <head>
+    <title> Links</title>
+  </head>
+
+  <body>
+    <h1 id="top">Film Folk</h1>
+    <h2>Festival Diary</h2>
+    <p>Here are some of the film festivals we will be attending this year, <br/></p>Please <a href="mailto:filmfolk@example.org">contact us</a>if you would like more info.</p>
+    <h3>January</h3>
+    <p><a href="http://www.sundance.org">Sundance Film Festival</a><br>
+      Park City, Utah, USA <br>
+      20 - 30 January, 2011</p>
+      <h3>February</h3>
+      <p><a href="http://www.tropfest.com">Tropfest</a><br/>
+      Sydney, Australia<br/>
+      20 February 2011</p>
+      <!-- additional content -->
+      <p><a href="about.html">About Film Folk</a></p>
+      <p><a href="#top"></a>Top of page</p>
+    </p>
+  </body>
+</html>
